--- a/templates/index.html
+++ b/templates/index.html
@@ -400,16 +400,16 @@
             <!-- Spezialtage Emmanuel -->
             <div class="totals-item male-totals">
                 <div class="totals-title"><strong>Spezialtage {{ male_name }}</strong></div>
-                <div class="totals-line">Skip: <span id="totalsMaleSkip">–</span></div>
-                <div class="totals-line">"krank/verletzt": <span id="totalsMaleInjured">–</span></div>
-                <div class="totals-line">"Ich kann nicht mehr!": <span id="totalsMaleCant">–</span></div>
+                <div class="totals-line">Skips <span id="totalsMaleSkip">–</span></div>
+                <div class="totals-line">krank/verletzt <span id="totalsMaleInjured">–</span></div>
+                <div class="totals-line">Ich kann nicht mehr! <span id="totalsMaleCant">–</span></div>
             </div>
             <!-- Spezialtage Joy -->
             <div class="totals-item female-totals">
                 <div class="totals-title"><strong>Spezialtage {{ female_name }}</strong></div>
-                <div class="totals-line">Skip: <span id="totalsFemaleSkip">–</span></div>
-                <div class="totals-line">"krank/verletzt": <span id="totalsFemaleInjured">–</span></div>
-                <div class="totals-line">Ich kann nicht mehr!: <span id="totalsFemaleCant">–</span></div>
+                <div class="totals-line">Skips <span id="totalsFemaleSkip">–</span></div>
+                <div class="totals-line">krank/verletzt <span id="totalsFemaleInjured">–</span></div>
+                <div class="totals-line">Ich kann nicht mehr! <span id="totalsFemaleCant">–</span></div>
             </div>
         </div>
     </section>
