--- a/templates/index.html
+++ b/templates/index.html
@@ -383,28 +383,28 @@
             </div>
         </div>
         <div class="totals-grid">
-            <!-- Reps Emmanuel -->
+            <!-- Reps Mann -->
             <div class="totals-item male-totals">
                 <div class="totals-title"><strong>Total {{ male_name }}</strong></div>
                 <div class="totals-line">Crunches: <span id="totalsMaleCrunches">–</span></div>
                 <div class="totals-line">Squats: <span id="totalsMaleSquats">–</span></div>
                 <div class="totals-line">Pushups: <span id="totalsMalePushups">–</span></div>
             </div>
-            <!-- Reps Joy -->
+            <!-- Reps Frau -->
             <div class="totals-item female-totals">
                 <div class="totals-title"><strong>Total {{ female_name }}</strong></div>
                 <div class="totals-line">Crunches: <span id="totalsFemaleCrunches">–</span></div>
                 <div class="totals-line">Squats: <span id="totalsFemaleSquats">–</span></div>
                 <div class="totals-line">Pushups: <span id="totalsFemalePushups">–</span></div>
             </div>
-            <!-- Spezialtage Emmanuel -->
+            <!-- Spezialtage Mann -->
             <div class="totals-item male-totals">
                 <div class="totals-title"><strong>Spezialtage {{ male_name }}</strong></div>
                 <div class="totals-line">Skips <span id="totalsMaleSkip">–</span></div>
                 <div class="totals-line">krank/verletzt <span id="totalsMaleInjured">–</span></div>
                 <div class="totals-line">Ich kann nicht mehr! <span id="totalsMaleCant">–</span></div>
             </div>
-            <!-- Spezialtage Joy -->
+            <!-- Spezialtage Frau -->
             <div class="totals-item female-totals">
                 <div class="totals-title"><strong>Spezialtage {{ female_name }}</strong></div>
                 <div class="totals-line">Skips <span id="totalsFemaleSkip">–</span></div>
